<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    android:background="@color/color_surface"
    tools:context=".presentation.auth.ui.FrontFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:text="@string/app_name"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/dimen_35sp"
        android:fontFamily="@font/titan_one_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/welcome_app_message"
        android:fontFamily="@font/baloo_thambi2_regular"
        android:textColor="@color/color_on_surface"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/description_front_message"
        android:textColor="@color/color_on_surface"
        android:textSize="@dimen/dimen_20sp"
        android:fontFamily="@font/baloo_thambi2_regular"
        app:layout_constraintTop_toBottomOf="@+id/textView1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_15dp"
        android:paddingBottom="@dimen/dimen_15dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_15dp"
        android:paddingBottom="@dimen/dimen_15dp"
        android:text="@string/sign_up"
        android:textColor="@color/color_primary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/color_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>