<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jean.cinemapp.presentation.movie.ui.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_movie_detail"
            app:destination="@id/movie_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.jean.cinemapp.presentation.search.ui.SearchFragment"
        android:label="@string/nav_title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_movie_detail"
            app:destination="@id/movie_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.jean.cinemapp.presentation.favorite.ui.FavoriteFragment"
        android:label="@string/nav_title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_movie_detail"
            app:destination="@id/movie_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.jean.cinemapp.presentation.profile.ui.ProfileFragment"
        android:label="@string/nav_title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/movie_detail"
        android:name="com.jean.cinemapp.presentation.movie.ui.MovieDetailFragment"
        android:label="fragment_movie_detail"
        tools:layout="@layout/fragment_movie_detail" >
        <action
            android:id="@+id/action_movie_detail_to_navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
        <action
            android:id="@+id/action_movie_detail_to_navigation_favorite"
            app:destination="@id/navigation_favorite"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
        <action
            android:id="@+id/action_movie_detail_to_navigation_search"
            app:destination="@id/navigation_search"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
        <argument
            android:name="current_movie"
            app:argType="com.jean.cinemapp.domain.model.movie.Movie"
            app:nullable="true" />
        <argument
            android:name="navigation_from"
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>